2.2.4/_sources/gallery/images_contours_and_fields/quiver_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_quiver_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_quiver_demo.py:


========================================================
Demonstration of advanced quiver and quiverkey functions
========================================================

Demonstrates some more advanced options for `~.axes.Axes.quiver`.  For a simple
example refer to :doc:`/gallery/images_contours_and_fields/quiver_simple_demo`.

Known problem: the plot autoscaling does not take into account the arrows, so
those on the boundaries are often out of the picture.  This is *not* an easy
problem to solve in a perfectly general way.  The workaround is to manually
expand the Axes objects.



.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from numpy import ma

    X, Y = np.meshgrid(np.arange(0, 2 * np.pi, .2), np.arange(0, 2 * np.pi, .2))
    U = np.cos(X)
    V = np.sin(Y)








.. code-block:: python


    fig1, ax1 = plt.subplots()
    ax1.set_title('Arrows scale with plot width, not view')
    Q = ax1.quiver(X, Y, U, V, units='width')
    qk = ax1.quiverkey(Q, 0.9, 0.9, 2, r'$2 \frac{m}{s}$', labelpos='E',
                       coordinates='figure')




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_quiver_demo_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    fig2, ax2 = plt.subplots()
    ax2.set_title("pivot='mid'; every third arrow; units='inches'")
    Q = ax2.quiver(X[::3, ::3], Y[::3, ::3], U[::3, ::3], V[::3, ::3],
                   pivot='mid', units='inches')
    qk = ax2.quiverkey(Q, 0.9, 0.9, 1, r'$1 \frac{m}{s}$', labelpos='E',
                       coordinates='figure')
    ax2.scatter(X[::3, ::3], Y[::3, ::3], color='r', s=5)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_quiver_demo_002.png
    :class: sphx-glr-single-img





.. code-block:: python


    fig3, ax3 = plt.subplots()
    ax3.set_title("pivot='tip'; scales with x view")
    M = np.hypot(U, V)
    Q = ax3.quiver(X, Y, U, V, M, units='x', pivot='tip', width=0.022,
                   scale=1 / 0.15)
    qk = ax3.quiverkey(Q, 0.9, 0.9, 1, r'$1 \frac{m}{s}$', labelpos='E',
                       coordinates='figure')
    ax3.scatter(X, Y, color='k', s=5)

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_quiver_demo_003.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions and methods is shown in this example:



.. code-block:: python


    import matplotlib
    matplotlib.axes.Axes.quiver
    matplotlib.pyplot.quiver
    matplotlib.axes.Axes.quiverkey
    matplotlib.pyplot.quiverkey







.. _sphx_glr_download_gallery_images_contours_and_fields_quiver_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: quiver_demo.py <quiver_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: quiver_demo.ipynb <quiver_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
